[gd_scene load_steps=3 format=3 uid="uid://cj8k2mn4xp1q3"]

[ext_resource type="Theme" uid="uid://b4q2xocvxk8y5" path="res://assets/themes/ui_theme.tres" id="1_m9n8o"]
[ext_resource type="Script" path="res://scenes/ui/ProgressBar.gd" id="2_r5t6y"]

[node name="ProgressBarComponent" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 50.0
theme = ExtResource("1_m9n8o")
script = ExtResource("2_r5t6y")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
modulate = Color(0.2, 0.2, 0.2, 1)

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
value = 0.0
show_percentage = false

[node name="PercentageLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
text = "0%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LoadingAnimation" type="AnimationPlayer" parent="."]